fs-base/metadata/objects/FS_Process__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Registered processes</description>
    <fields>
        <fullName>Component__c</fullName>
        <description>API name of the container component that implements the process in the UI</description>
        <inlineHelpText>API name of the container component that implements the process in the UI</inlineHelpText>
        <label>Component</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deserializer_Class__c</fullName>
        <label>Deserializer Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Namespace__c</fullName>
        <description>Namespace of package that contains process</description>
        <inlineHelpText>Namespace of package that contains process</inlineHelpText>
        <label>Package Namespace</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parser_Class__c</fullName>
        <description>Class name of class that implements parser interface</description>
        <inlineHelpText>Class name of class that implements parser interface</inlineHelpText>
        <label>Parser Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Class__c</fullName>
        <description>Name of class that implements process interface</description>
        <inlineHelpText>Name of class that implements process interface</inlineHelpText>
        <label>Process Class</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Serializer_Class__c</fullName>
        <description>Class name of class that implements serializer interface</description>
        <inlineHelpText>Class name of class that implements serializer interface</inlineHelpText>
        <label>Serializer Class</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FS Process</label>
</CustomObject>